--- a/src/components/contact/maps.css
+++ b/src/components/contact/maps.css
@@ -21,10 +21,11 @@
     display: flex;
     font-size: 20px;
     padding: 1rem;
-    & i{
-        color:orange;
-        margin-right: 1rem;
-    }
+    
+}
+.contact-main li i{
+    color:orange;
+    margin-right: 1rem;
 }
 .contact-main ul{
     width: 50%;
@@ -47,30 +48,30 @@
 
 @media(max-width:768px){
     
-.contact-container{
-    height: auto;
-}
-.contact-main{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: start;
-    gap: 0rem;
-    flex-direction: column;
-    & ul{
+    .contact-container{
+        height: auto;
+    }
+    .contact-main{
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: start;
+        gap: 0rem;
+        flex-direction: column;
+    }
+    .contact-main ul{
         width: 100%;
         height: 55vh;
         align-items: center;
         justify-content: center;
         display: flex;
         flex-direction: column;
-        & h2{
-            width: 100%;
-
-        }
-        & li{
-            font-size: 18px;
-        }
     }
-}
+    .contact-main ul h2{
+        width: 100%;
+
+    }
+    .contact-main ul h2 li{
+        font-size: 18px;
+    }
 }
