--- a/src/components/whoAreWe/whoarewe.css
+++ b/src/components/whoAreWe/whoarewe.css
@@ -23,7 +23,7 @@
 
 .whoarewe-info{
     display: flex;
-    padding:1.5rem 0;
+    padding:1rem 0;
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -37,7 +37,7 @@
     
 }
 .whoarewe-info li{
-    font-size: 20px;
+    font-size: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -47,30 +47,43 @@
 }
 .whoarewe-info i{
     font-size: 36px;
-    color:rgb(248, 248, 248);
+    color:rgb(255, 255, 255);
 }
 
 
 
 .text{
-    background-color: rgb(54, 54, 54);
-    padding:3rem 10rem;
-    height: 500px;
+    background-color: #fffafa;
+    padding:3rem 5rem;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
     font-size: 16px;
     font-weight: bold; 
     letter-spacing: 1px;
+    align-items: center;
+    justify-content: space-between;
     gap: 2rem;
+}
+.text-info{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    height: 60%;
+    justify-content: space-between;
+}
+
+.text img{
+    width: 60%;
+    border-radius: 1rem;
 }
 
 .text p{
     text-align: start;
-    font-family: 'Lucida Sans', Arial, sans-serif;
-    color:rgb(231, 229, 229);
+    color:rgb(0, 0, 0);
 }
 .text span{
-    color:rgb(255, 191, 14);
+    color:rgb(255, 102, 0);
     font-family: 'Lucida Sans', Arial, sans-serif;
 
 }
@@ -102,13 +115,16 @@
     }
     .text{
         height: auto;
-        width: 100%;
-        padding: 4rem 0.1rem 6rem 0.5rem;
-        & h2{
-            font-size: 24px;
-            margin-top: 1rem
-        }
-        
+        display: flex;
+        flex-direction: column;
+        padding:1rem 1rem;
+
+    }
+    .text-info{
+        width: 90%;
+    }
+    .text img{
+        width: 90%;
     }
 
 }
