--- a/src/components/whoAreWe/whoarewe.css
+++ b/src/components/whoAreWe/whoarewe.css
@@ -17,7 +17,7 @@
 }
 .whoarewe-inner h2{
     color:rgb(212, 212, 212);
-    font-size: 90px;
+    font-size: 80px;
     font-weight: 100;
 }
 
@@ -27,7 +27,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    background-color: rgb(37, 37, 37);
+    background-color: rgb(73, 73, 73);
 }
 .whoarewe-info ul{
     display: flex;
@@ -104,11 +104,19 @@
         font-size: 16px
     }
     .whoarewe-info i{
-        font-size: 36px;
+        font-size: 20px;
+    }
+    .whoarewe-info li{
+        font-size: 13px;
+        color:rgb(255, 255, 255);
     }
     .whoarewe-text p{
         width: 90%;
         
+    }
+    .whoarewe-inner h2{
+        color:rgb(255, 255, 255);
+        font-size: 50px;
     }
     .whoarewe-text{
         width: 90%;
@@ -122,6 +130,16 @@
     }
     .text-info{
         width: 90%;
+    }
+    .text{
+        font-size: 14px;
+        font-weight: 500;
+    }
+    .text-info h2{
+        font-size: 30px;
+        color:rgb(255, 81, 0);
+        font-weight: bold;
+
     }
     .text img{
         width: 90%;
