--- a/src/components/homePages/slider/slider.css
+++ b/src/components/homePages/slider/slider.css
@@ -7,10 +7,9 @@
 
 
 .slide-img {
-    height: 100%;
 }
 .slide-img img {
-    width: 100%;
+    height: 80vh;
     /* object-fit: cover; */
 }
 
@@ -21,13 +20,9 @@
     align-items: center;
 }
 
-
-
-
 .swiper {
     width: 100%;
 }
-
 
 .swiper-slide {
     width: 100%;
