--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,14 +1,31 @@
 .topbar-container{
     display: flex;
-    justify-content: space-evenly;
-    background-color: rgb(52, 52, 52);
+    background-color: rgb(112, 64, 0);
     color:white;
-    padding: 0.4rem;
-    align-items: center;
+    flex-direction: column;
+    padding: 0.3rem;
+
 }
 
 .topbar-container ul{
     display: flex;
-    gap: 1rem;
     list-style: none;
 }
+.topbar-container *{
+    margin: 0;
+    padding: 0;
+}
+.topbar-container p{
+    display: flex;
+    justify-content: right;
+    color:rgb(255, 255, 255)
+}
+.topbar-container h3{
+    padding-bottom: 0.2rem;
+    
+}
+.topbar-container p i{
+    margin-right: 0.3rem;
+    font-size: 14px;
+}
+
