--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -14,6 +14,7 @@
 :root {
 	--mainColorLight: #5767aa;
 	--textColor: #eee;
+	--mainColor: #460000;
 }
 
 header {
@@ -22,7 +23,7 @@ header {
 	justify-content: space-between;
 	height: 100px;
 	padding: 0 2rem;
-	background-color: #460000;
+	background-color:  var(--mainColor);
 	color: var(--textColor);
 }
 .navbar-container img{
