--- a/src/components/homePages/main/main.css
+++ b/src/components/homePages/main/main.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
 }
 .main-title{
     font-weight: bold;
@@ -29,11 +29,18 @@
     cursor: pointer;
     transition: transform 0.3s;
 }
-.tit{
-    opacity: 0;
-    transform: scale(.7);
-}
 
+.main-info{
+    font-size: 20px;
+    margin-top: 1rem;
+}
+.main-info span{
+    color:Red;
+}
+.vehicles{
+    color:rgb(207, 128, 0) !important;
+    font-weight: bold;
+}
 
 .main-img-container:hover{
     transform:scale(1.05);
@@ -42,10 +49,7 @@
     opacity: 0;
     transform: scale(.7);
 }
-.main-text{
-    opacity: 0;
-    transform: scale(.7);
-}
+
 .activated-images{
     opacity: 1;
     transition: 0.3s;
