--- a/src/components/contact/maps.css
+++ b/src/components/contact/maps.css
@@ -42,9 +42,10 @@
     margin-top: 3rem;
     color:rgb(99, 0, 0);
     font-weight: bold;
-
 }
-
+.contact-info{
+    margin-left: 1rem;
+}
   .map-container iframe{
     width: 400px;
     height: 400px;
@@ -63,9 +64,11 @@
         gap: 0rem;
         flex-direction: column;
     }
+    .contact-bold{
+        font-weight: bold;
+    }
     .contact-main ul{
         width: 100%;
-        height: 55vh;
         align-items: center;
         justify-content: center;
         display: flex;
@@ -73,6 +76,8 @@
     }
     .contact-main ul h2{
         width: 100%;
+        margin-top: 1rem;
+        padding-bottom: 1rem;
 
     }
     .contact-main ul h2 li{
